[package]
name = "derive-alias"
description = "Alias multiple derives as one."
license = "MIT"
version = "0.1.1"
repository = "https://github.com/ibraheemdev/derive-alias"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
edition = "2021"
keywords = ["derive", "alias", "macros"]
categories = []
readme = "README.md"

[dependencies]
